dpt-menu fix alignment

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ h4 {
 
 .icon-small {
   font-size: 1.25em;
-  margin: auto;
+  margin-left: auto;
 }
 
 .icon-large {
@@ -362,7 +362,6 @@ nav .fly-item {
   top: 50%;
   margin-top: -24px;
   width: 30px;
-  height: 10px;
   border-radius: 3px;
   right: -32px;
   background-color: var(--primary-color);
@@ -430,6 +429,12 @@ nav .fly-item {
   padding: 1.3em;
   height: 60px;
   width: 60px;
+}
+
+.dpt-menu > ul > li > a {
+  font-size: var(--font-small);
+  height: 46px;
+  align-items: center;
 }
 
 /*---------------------------
@@ -599,5 +604,22 @@ form.search button:hover {
   .header-main .right {
     max-width: 600px;
     margin-left: auto;
+  }
+
+  /* Departments menu */
+  .dpt-menu {
+    position: absolute;
+    top: var(--percent100);
+    width: 300px;
+    background-color: var(--white-color);
+    border: 1px solid var(--border-color);
+    border-top: 0;
+    border-bottom: 0;
+  }
+
+  .dpt-menu > ul > li > a {
+    font-weight: var(--fw5);
+    padding: 0 1.5em;
+    border-bottom: 1px solid var(--border-color);
   }
 }
